# Operating-system

lab1/: README.md  main.cpp
lab2/: CMakeLists.txt  README.md
lab2/src/: main.cpp  main.h
lab2/tests/: test_min_max.cpp
lab3/: CMakeLists.txt  README.md  lab3.cpp  lab3.h  test_lab3.cpp
lab4/: CMakeLists.txt  README.md  Receiver.cpp  Sender.cpp  lab4.h  tests.cpp
lab5/: CMakeLists.txt  Client.cpp  README.md  Server.cpp  lab5.h  test_main.cpp
